--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     font-size: 1.3rem;
     font-family: 'Oswald', sans-serif;
     background: #f9f9f9;
+    background-image: url(img/Evening_Scenery.png); 
+    background-size: cover;
   }
   
   a {
@@ -20,16 +22,32 @@
     margin: auto;
     overflow: auto;
     padding: 0 2rem;
-  }
   
+  }
+
+
   .main-header {
-    height: 55vh;
+    height: 100vh;
     padding: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+    
+  
+  }
+  html::-webkit-scrollbar {
+    width: 20px; 
+  }
+  
+html::-webkit-scrollbar-track {
+    background:  linear-gradient(0deg, rgba(255, 0, 0, 1) 0%, rgba(7, 0, 211, 1) 100%);
+  }
+
+html::-webkit-scrollbar-thumb {
+    background: transparent;
+    box-shadow: 0px 0px 0px 100vh black;
   }
   
   .main-header h1 {
