--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ html::-webkit-scrollbar-thumb {
   .main-header p {
     font-size: 2rem;
     font-family: 'Blanka', sans-serif;
+    letter-spacing: 2.2px;
                                                 
                                                 
                                                 
